examples/local-advanced/kubernetes/day-0/01-consul-api-gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
  namespace: consul-system
spec:
  gatewayClassName: consul-api-gateway
  listeners:
  - name: https
    protocol: HTTPS
    port: 8443
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: consul-server-cert
  - name: http
    protocol: HTTP
    port: 8000
    allowedRoutes:
      namespaces:
        from: All
